# nohang-tray

./: .gitignore  AGENTS.md  CMakeLists.txt  CODING_GUIDE.md  README.md
.github/workflows/: ci.yml
data/: org.archlars.nohangtray.desktop
packaging/: PKGBUILD
scripts/: common.sh  maintenance-codex.sh  setup-codex.sh
src/: NoHangConfig.cpp  NoHangConfig.h  NoHangUnit.cpp  NoHangUnit.h  ProcessTableAction.cpp  ProcessTableAction.h  SystemSnapshot.cpp  SystemSnapshot.h  Thresholds.cpp  Thresholds.h  TooltipBuilder.cpp  TooltipBuilder.h  TrayApp.cpp  TrayApp.h  main.cpp  pch.h
tests/: CMakeLists.txt  NoHangConfigTest.cpp  NoHangConfig_test.cpp  NoHangUnit_test.cpp  ProcessTableAction_test.cpp  SystemSnapshot_test.cpp  Thresholds_test.cpp  TooltipBuilder_test.cpp  TrayApp_test.cpp
